# fiap-mlops-datathon

./: .gitignore  README.md  plan.md  pyproject.toml
conf/: logging.yml
conf/base/: catalog.yml  parameters.yml
notebooks/: explore.ipynb
src/fiap_mlops_datathon/: __init__.py  __main__.py  pipeline_registry.py  settings.py
src/fiap_mlops_datathon/pipelines/data_processing/: __init__.py  nodes.py  pipeline.py  run_primary_pipeline.py  run_silver_pipeline.py
src/fiap_mlops_datathon/pipelines/data_processing/materialize_primary/: core_applicants_jobs_prospects.sql  prospects.sql  vagas.sql
src/fiap_mlops_datathon/pipelines/data_processing/materialize_silver/: applicants.sql  core_applicants_jobs_prospects.sql
src/fiap_mlops_datathon/pipelines/features_pipeline/: __init__.py  nodes.py  pipeline.py
src/fiap_mlops_datathon/pipelines/json_processing/: nodes.py  pipeline.py
